# drawppt

./: .gitignore  CLAUDE.md  README.md  drawppt_demo.pptx  pyproject.toml  test_basic.py  test_full.py  test_mcp.py  test_mcp_simple.py  test_multiline.py  test_v02.py
docs/: PBD.md  PRD.md  SPEC.md
src/drawppt/: __init__.py  server.py  session.py  slide.py  tools.py
src/drawppt/elements/: __init__.py  base.py  image.py  shape.py  textbox.py
