[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drawppt"
version = "0.1.0"
description = "MCP server for creating PPTX files with pixel-precise control"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "python-pptx>=0.6.21",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
]

[project.scripts]
drawppt = "drawppt.server:main"
